<resources>
    <string name="app_name">MSIT SIS</string>
    <string name="roll_number">Roll Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username">Username</string>
    <string name="title_activity_dashboard">Dashboard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="attendance">Attendance</string>
    <string name="home_work">Home Work</string>
    <string name="notification">Notification</string>
    <string name="emergency">Emergency</string>
    <string name="events">Events</string>
    <string name="marks">Marks</string>
    <string name="apply_leave">Apply Leave</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="parent_name">Parent Name</string>
    <string name="parent_mobile">Parent Mobile Number</string>
    <string name="parent_email">Parent Email</string>
    <string name="title">Title</string>
    <string name="reason">Reason</string>
    <string name="course_name">Course</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="no_of_leaves">Total Leaves</string>
    <string name="leaves_taken">Leaves Taken</string>
    <string name="leaves_remaining">Leaves Remaining</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="conform_new_password">Conform New Password</string>
    <string name="update_profile">Update Profile</string>
    <string name="percentage">Percentage</string>
    <string name="started_date">Start Date</string>
    <string name="completed_date">End Date</string>
    <string name="description">Description</string>
    <string name="title_activity_mentor_dashboard">Dashboard</string>
    <string name="post_event">Announcements</string>
    <string name="approve_leaves">Approve Leaves</string>
    <string name="student_marks">Student Marks</string>
    <string name="type">Type</string>
</resources>
