<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/application_tool_bar" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/input_old_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/old_password"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/colorPrimaryDark" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/input_new_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/new_password"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/colorPrimaryDark" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_conform_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/input_conform_new_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/conform_new_password"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/colorPrimaryDark" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/change_password"
        style="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/ripple"
        android:padding="5dp"
        android:text="@string/change_password" />

</LinearLayout>