<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/application_tool_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180dp">

                <android.support.v7.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:elevation="12dp"
                    android:innerRadius="0dp"
                    android:shape="ring"
                    android:thicknessRatio="2"
                    app:cardCornerRadius="45dp">

                    <ImageView
                        android:id="@+id/user_img"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_alignStart="@+id/cardView"
                        android:layout_below="@+id/edit_profile"
                        android:scaleType="fitXY" />

                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/edit_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/ic_edit_profile" />


            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHighlight="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/input_full_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/full_name"
                        android:inputType="text"
                        android:textColor="@color/colorPrimaryDark" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHighlight="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/input_roll_number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:editable="false"
                        android:hint="@string/roll_number"
                        android:inputType="none"
                        android:textColor="@color/colorPrimaryDark" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHighlight="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorPrimaryDark" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHighlight="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/input_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/mobile"
                        android:inputType="number"
                        android:textColor="@color/colorPrimaryDark" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHighlight="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/input_parent_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:editable="false"
                        android:hint="@string/parent_name"
                        android:inputType="none"
                        android:textColor="@color/colorPrimaryDark" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHighlight="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/input_parent_mobile_number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:editable="false"
                        android:hint="@string/parent_mobile"
                        android:inputType="none"
                        android:textColor="@color/colorPrimaryDark" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHighlight="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/input_patent_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:editable="false"
                        android:hint="@string/parent_email"
                        android:inputType="none"
                        android:textColor="@color/colorPrimaryDark" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/update_profile_btn"
                    style="@style/AppTheme.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:background="@drawable/ripple"
                    android:padding="5dp"
                    android:text="@string/update_profile"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>