<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".8"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/mentor_image"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".7" />

                <TableLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/mentor_full_name_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:gravity="left|center"
                        android:paddingLeft="4dp"
                        android:text="@string/full_name"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/mentor_mobile_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:gravity="left|top"
                        android:padding="4dp"
                        android:text="@string/mobile"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/mentor_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:gravity="left|top"
                        android:padding="4dp"
                        android:text="@string/email"
                        android:textColor="@android:color/black" />
                    <TextView
                        android:id="@+id/mentor_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:gravity="left|top"
                        android:padding="4dp"
                        android:textColor="@android:color/black" />
                </TableLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>